# dustgoggles

./: .gitignore  pyproject.toml  readme.md  setup.py
.github/: test_environment.yml
.github/workflows/: ubuntu_tests.yml
dustgoggles/: composition.py  dynamic.py  func.py  mosaic.py  pivot.py  scrape.py  structures.py  tracker.py
dustgoggles/codex/: _array_holding_area.py  array_codecs.py  codecs.py  implements.py  memutilz.py
dustgoggles/codex/tests/: test_array_codex.py  test_codex.py
dustgoggles/test_utils/: core.py
dustgoggles/test_utils/data/: m20_waypoints.json  sorghum_forecast.csv  wordlist.txt
dustgoggles/tests/: test_composition.py  test_dynamic.py  test_func.py  test_pivot.py  test_structures.py  test_tracker.py
